# TSSE

./: .gitignore  .pre-commit-config.yaml  README.md  justfile
.github/workflows/: verifications.yml
TP1/: Tp1-IriarteNicolas.tex  charter.cls
TP2/: project.yml
TP2/src/: leds.c  leds.h
TP2/test/: test_leds.c
TP3/: .clang-format  .gitignore  .pre-commit-config.yaml  .projectile  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  Doxyfile  ProjectOptions.cmake  README.md  justfile
TP3/cmake/: CompilerWarnings.cmake  Doxygen.cmake
TP3/configured_files/: Config.hpp.in
TP3/libs/: CMakeLists.txt
TP3/libs/Doxygen/include/MyLibrary/: example.hpp  subclass-example.hpp
TP3/libs/Nemu/: CMakeLists.txt
TP3/libs/Nemu/src/: Cpu.cpp  Memory.cpp  Utils.cpp
TP3/libs/Nemu/src/private_headers/Private/Nemu/: MemoryImpl.hpp
TP3/libs/Nemu/src/public_headers/Nemu/: Cpu.hpp  Memory.hpp  ReturnCodes.hpp  Utils.h
TP3/libs/Nemu/tests/: CMakeLists.txt  Cpu_tests.cpp  Memory_tests.cpp  Utils_tests.cpp
TP5/: Tp5-IriarteNicolas.tex  charter.cls  project.yml
TP5/drawio_sources/: CTM.drawio
TP5/src/: leds.c  leds.h
TP5/test/: test_leds.c
